db context added

--- a/ExpenseTrackerWeb/appsettings.json
+++ b/ExpenseTrackerWeb/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultConnection": "Server=(localdb)\\projectsv13;Database=SecretDb;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security = true;"
 }
