fixed issues with scafolliding. Expenses CRUD added with ExpenseReportsDB wnd Expense Report Model

--- a/ExpenseTrackerWeb/appsettings.json
+++ b/ExpenseTrackerWeb/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultConnection": "Server=(localdb)\\projectsv13;Database=SecretDb;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security = true;"
+  "DefaultConnection": "Server=(localdb)\\projectsv13;Database=ExpensesReportDB;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security = true;"
 }
