--- a/ExpenseTrackerUnitTest/ExpenseTrackerUnitTest.csproj
+++ b/ExpenseTrackerUnitTest/ExpenseTrackerUnitTest.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExpenseTrackerWeb\ExpenseTrackerWeb.csproj" />
+  </ItemGroup>
+
 </Project>
