--- a/ExpenseTrackerIntegrationTest/ExpenseTrackerIntegrationTest.csproj
+++ b/ExpenseTrackerIntegrationTest/ExpenseTrackerIntegrationTest.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IKVM" Version="8.1.5717" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
+    <PackageReference Include="WebDriverManager" Version="2.12.2" />
   </ItemGroup>
 
   <ItemGroup>
