--- a/ExpenseTrackerWeb/ExpenseTrackerWeb.csproj
+++ b/ExpenseTrackerWeb/ExpenseTrackerWeb.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Chart.js" Version="2.9.3" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
 	     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
